fix: refactored the overflow

--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,7 @@ h2 {
   z-index: -2;
   /* background-color: red; */
   width: 100%;
+  overflow-x: hidden;
 }
 .scrolly {
   scroll-behavior: smooth;
